# assinatura-pdf

./: .gitignore  README.md  projeto.md  pyproject.toml
.cursor/rules/: gsd-project.mdc  language-pt-br.mdc
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-fundacao-beeware-tela-principal/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-UAT.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-sessao-lista-e-texto-da-marca/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/marcaja/: __init__.py  __main__.py  app.py  session.py
tests/: test_session.py
