[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "marcaja"
version = "0.1.0"
description = "Marca d'água em PDF e imagens no Android (app local)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["toga~=0.5.4"]

[project.optional-dependencies]
dev = ["briefcase==0.4.2"]

[tool.briefcase]
project_name = "MarcaJá"
bundle = "dev.marcaja"
version = "0.1.0"
license = "MIT"

[tool.briefcase.app.marcaja]
formal_name = "MarcaJá"
description = "Marca d'água em PDF e imagens no Android."
sources = ["src/marcaja"]
requires = ["toga~=0.5.4"]
