[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "marcaja"
version = "0.1.0"
description = "Marca d'água em PDF e imagens no Android (app local)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
# Toga GTK fica no extra `dev` — no Android o Chaquopy não pode resolver `toga-gtk`/pycairo.
dependencies = []

[project.optional-dependencies]
dev = ["briefcase==0.4.2", "toga~=0.5.4", "pytest>=8"]

[tool.briefcase]
project_name = "MarcaJá"
bundle = "dev.marcaja"
version = "0.1.0"
license = "MIT"

[tool.briefcase.app.marcaja]
formal_name = "MarcaJá"
description = "Marca d'água em PDF e imagens no Android."
sources = ["src/marcaja"]
requires = ["toga-android~=0.5.4"]
